welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:13: error: reassignment to val
	a = a + 1
          ^