welcome.lessons.welcome.loopfor.LoopFor.scala.code
var i = 0
var a = 0
while(!estSurBiscuit())
{
	avance()
	i = i + 1
}
prendBiscuit()
for(a <- 0 to i)
{
	recule()
	a = a + 1
}
poseBiscuit()